api-gateway/monitoring/elk/kibana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: multi-tenant
  labels:
    app: kibana
spec:
  type: ClusterIP
  ports:
  - port: 5601
    targetPort: 5601
    protocol: TCP
    name: http
  selector:
    app: kibana
